# ai-bindgen-rs

./: Cargo.toml  LICENSE.md  README.md
examples/: parameters.rs  simple.rs  tests.rs
src/: attributes.rs  creds.rs  error.rs  impls.rs  lib.rs  prompt.txt  utils.rs
