[package]
name = "ai_bindgen"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.104", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
thiserror = "2.0.12"
openai_api_rust = { git = "https://github.com/germangb/openai-api.git", branch = "native-certs-feature", features = ["native-certs"] }
